Changelog
=========

1.6 - (unreleased)
-----------------
 * When set versionId on adding an assessment, also look for IndicatorFactSheets
   with same indicator set [ghicaale #3491]
 * Reindex child assessment objects when saving 'codes' on a specification [ghicaale #3491]
 * Fix wrong check for EEA Data metatype [tiberich #3541]
 * Fixed indicator code validator. Now an IndicatorFachtSheet validate its code
   upon Assessments [ghicaale #3491]
 * Fixed versions display of assessments on same Specification versioning set [ghicaale #3491]
 * Removed custom Title function, we do not need to show version info in title for specifications [demarant]
 * Fixed wrong label on IndicatorFactSheet for assessment text, adjusted more fields labels and
   descriptions [demarant]

1.5 - (2010-08-04)
------------------
* Fixed missing "More updates info box" in assessment and adjusted design and position on both [demarant]
* Consistent order of fields under aggregated edit of assessment as in the view. [demarant]
* Fix: unicode error in Specification.SearchableText,
       Assessment.SearchableText and IndicatorFactSheet.SearchableText [ghicaale]
* Hide metadata divs from display in active_field and active_region macros [tiberich]
* Fix display and sorting of Assessments for a Specification agg edit. [tiberich]
* Add custom AssessmentPart edit template, to make it include
  eea.relations JS scripts [tiberich]
* Mark Ownership field as mandatory in agg edit [tiberich]
* Code cleanup in browser/assessment.py to eliminate duplicated code
  from eea.versions [tiberich]

1.4 - (2010-07-08)
------------------
* Make "codes" available under SearchableText index for Specification,
  Assessment and IndicatorFactSheet [ghicaale]
* Marked more fields on Indicator Fact Sheet as searchable [demarant]
* Fix: typo in traverse.py [ghicaale]

1.3 - (2010-07-07)
------------------
* Add traverser in order to maintain old assessment URLs after migration [ghicaale]

1.2 - (2010-07-01)